# vscode-cmake-git

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: test.h
src/: test.cpp
